--- a/src/main/webapp/display.html
+++ b/src/main/webapp/display.html
@@ -15,7 +15,7 @@
     </div>
     <script type="text/javascript">
 
-        alert(123);
+        //alert(123);
         var url = window.location.href;
         url =  decodeURI(decodeURI(url));
 
@@ -40,10 +40,9 @@
         var localSearch = new BMap.LocalSearch(map);
         localSearch.enableAutoViewport(); //允许自动调节窗体大小
         map.clearOverlays(); //清空原来的标注
-        //var keyword = "彩虹科技大厦";
         localSearch.setSearchCompleteCallback(function(searchResult) {
             var poi = searchResult.getPoi(0);
-            map.centerAndZoom(poi.point, 20);
+            map.centerAndZoom(poi.point, 17);
             var marker = new BMap.Marker(new BMap.Point(poi.point.lng, poi.point.lat)); // 创建标注，为要查询的地方对应的经纬度
             map.addOverlay(marker);
             marker.setAnimation(BMAP_ANIMATION_BOUNCE); //跳动的动画
